tests/files/lexer_tests/should_fail/027.cmdr
// Illegal character in string (ascii 27)
var = ''